k8s/apps/picard/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: picard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picard
  namespace: picard
  labels:
    app.kubernetes.io/name: picard
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: picard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: picard
    spec:
      securityContext:
        fsGroup: 100000
      containers:
        - name: picard
          image: ghcr.io/minchingtonak/picard:2.13.3@sha256:c98fd975f631a3d89230e6b381a54995a98d75e03f78988d8ab2726e2265ceaf
          ports:
            - name: http
              containerPort: 5800
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: picard-config
        - name: music
          persistentVolumeClaim:
            claimName: picard-music
        - name: downloads
          persistentVolumeClaim:
            claimName: picard-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: picard
  namespace: picard
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: picard
  ports:
    - port: 5800
      targetPort: 5800
      name: http
